# chess_ai

./: .gitignore  CMakeLists.txt  Makefile  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
executables/: chessboard  chessboard_unit_tests
include/: chessboard.h
src/: chessboard.cpp  hello_world.cpp  robotic_chess_ai.cpp
test/: chessboard_test.cpp
